Fix some audit concerns, including increasing contrast and fixing some invalid markup in nav menu.

--- a/src/assets/css/bluecollar/style-colors.scss
+++ b/src/assets/css/bluecollar/style-colors.scss
@@ -12,7 +12,7 @@
 }
 
 .bc-blue {
-  color: #5c7e9e;
+  color: #33587a;
 }
 
 /* Background Colors */
@@ -25,7 +25,7 @@
 }
 
 .bg-bc-blue {
-  background-color: #5c7e9e;
+  background-color: #33587a;
   color: white; /* TODO: Move this out */
 }
 
