--- a/src/assets/css/bluecollar/theme-typography.scss
+++ b/src/assets/css/bluecollar/theme-typography.scss
@@ -4,7 +4,7 @@ a {
 
 a:hover,
 a:active {
-  color: #5c7e9e;
+  color: #33587a;
 }
 
 p {
@@ -92,7 +92,7 @@ p {
 }
 .g-pstyle11 a,
 .g-pstyle11 {
-  color:rgb(92, 126, 158);
+  color:#33587a;
 }
 .g-pstyle12 a,
 .g-pstyle12 {
