--- a/src/assets/css/bluecollar/theme.scss
+++ b/src/assets/css/bluecollar/theme.scss
@@ -32,7 +32,7 @@ footer .logo {
 
 /* Override ampstart defaults */
 .ampstart-headerbar .ampstart-navbar-trigger {
-  color: #5c7e9e;
+  color: #33587a;
 }
 
 #main .g-artboard {
@@ -165,7 +165,7 @@ img.circle {
   display: inline-block;
   background: white;
   padding: 1rem 2rem;
-  border: 1px solid #5c7e9e; /* Blue Collar Red */
+  border: 1px solid #33587a; /* Blue Collar Blue */
   text-decoration: none;
 }
 
@@ -176,7 +176,7 @@ a.action-link:hover,
 a.action-button:active,
 a.action-button:visited,
 a.action-button:hover {
-  color: #5c7e9e;
+  color: #33587a;
 }
 
 .more-info-link {
@@ -185,7 +185,7 @@ a.action-button:hover {
 
 /* Menu Customization */
 .ampstart-nav-item.highlighted {
-  background-color: #5c7e9e;
+  background-color: #33587a;
   color: white;
 }
 
@@ -201,7 +201,7 @@ a.action-button:hover {
 
 /* Social */
 .ampstart-icon {
-  /*fill: #5c7e9e;*/
+  /*fill: #33587a;*/
   fill: white;
 }
 
